--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+/* Hide scrollbar by default */
+.Sidebar::-webkit-scrollbar {
+    display: none;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  /* Show scrollbar on hover */
+  .overflow-y-auto:hover::-webkit-scrollbar {
+    display: block;
   }
-  to {
-    transform: rotate(360deg);
+  
+  /* Customize scrollbar style */
+.Sidebar::-webkit-scrollbar {
+     width: 11px;
   }
-}
+  
+ 
+  
+ .Sidebar::-webkit-scrollbar-track {
+    background-color: #f5f5f5;
+  }
+  
+  .Sidebar::-webkit-scrollbar-thumb {
+    background-color: #777272;
+    border-radius: 20px;
+    border: 2px solid #f5f5f5;
+    height: 2px;
+  }
+  
+  .Sidebar::-webkit-scrollbar-thumb:hover {
+    background-color: #777272;
+
+  }
+  
+
+
+ 
