--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 /* Hide scrollbar by default */
-.Sidebar::-webkit-scrollbar {
+::-webkit-scrollbar {
     display: none;
   }
   
@@ -13,28 +13,28 @@
   }
   
   /* Customize scrollbar style */
-.Sidebar::-webkit-scrollbar {
+  ::-webkit-scrollbar {
      width: 11px;
   }
+  ::-webkit-scrollbar {
+   height: 2px;
+ }
   
- 
-  
- .Sidebar::-webkit-scrollbar-track {
+  ::-webkit-scrollbar-track {
     background-color: #f5f5f5;
   }
   
-  .Sidebar::-webkit-scrollbar-thumb {
-    background-color: #777272;
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
     border-radius: 20px;
     border: 2px solid #f5f5f5;
-    height: 2px;
+    
   }
   
-  .Sidebar::-webkit-scrollbar-thumb:hover {
-    background-color: #777272;
-
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
   }
   
 
 
- 
+  /* /play/{video.id} */
